--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,17 +29,15 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip && pip install -r requirements.txt
-    displayName: 'Install dependencies'
+  - script: pip install tox
+    displayName: 'Install tox'
 
-  - script: |
-      pip install pytest
-      pytest tests --doctest-modules --junitxml=junit/test-results.xml
-    displayName: 'pytest'
+  - script: tox -e py -- -m unit --junitxml=junit/unit-test.xml      
+    displayName: 'tox run unit'
 
   - task: PublishTestResults@2
     inputs:
-      testResultsFiles: '**/test-results.xml'
+      testResultsFiles: 'junit/*.xml'
       testRunTitle: 'Python $(python.version)'
     condition: succeededOrFailed()
 
